Bug 1733651 - [comm-esr91] Prevent sending out bcc header when mailnews.send.jsmodule=false. r=mkmelin a=wsmwk

Differential Revision: https://phabricator.services.mozilla.com/D127341