mailnews/compose/test/unit/test_attachment.js
@@ -163,9 +163,5 @@ add_task(async function testBinaryAfterPlainTextAttachment() {
     mailTestUtils.firstMsgHdr(gDraftFolder)
   );
   // If only the first few chars are used, encoding will be incorrectly 7bit.
-  Assert.ok(
-    msgData.includes(
-      'Content-Disposition: attachment; filename="binary-after-plain.txt"\r\nContent-Transfer-Encoding: base64\r\n'
-    )
-  );
+  Assert.ok(msgData.includes("Content-Transfer-Encoding: base64\r\n"));
 });
